--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 	"description": "超级壁纸",
 	"main": "./electron/wallpaper/main.js",
 	"scripts": {
+		"dev": "vite",
+		"build1": "vite build",
+		"preview": "vite preview",
 		"web:serve": "vue-cli-service serve",
 		"web:build": "vue-cli-service build",
 		"electron:dev": "electron .",
@@ -24,6 +27,7 @@
 		"electron-squirrel-startup": "^1.0.1",
 		"electron-updater": "^6.2.1",
 		"request": "^2.88.2",
+		"vue": "^3.5.17",
 		"wallpaper": "^5.0.1"
 	},
 	"devDependencies": {
@@ -37,8 +41,10 @@
 		"@electron-forge/publisher-github": "^7.4.0",
 		"@electron/fuses": "^1.8.0",
 		"@electron/packager": "^18.3.2",
+		"@vitejs/plugin-vue": "^6.0.0",
 		"electron": "^30.1.0",
 		"electron-builder": "^24.13.3",
-		"electron-winstaller": "^5.3.1"
+		"electron-winstaller": "^5.3.1",
+		"vite": "^7.0.0"
 	}
 }
