--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"electron-updater": "^6.2.1",
 		"request": "^2.88.2",
 		"vue": "^3.5.17",
+		"vue-router": "^4.5.1",
 		"wallpaper": "^5.0.1"
 	},
 	"devDependencies": {
