--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"author": "jares chiang",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.10.0",
 		"capture-website": "^1.4.0",
 		"electron-squirrel-startup": "^1.0.1",
 		"electron-updater": "^6.2.1",
@@ -46,6 +47,7 @@
 		"electron": "^30.1.0",
 		"electron-builder": "^24.13.3",
 		"electron-winstaller": "^5.3.1",
+		"sass": "^1.89.2",
 		"vite": "^7.0.0"
 	}
 }
